bug: friend list error

--- a/src/pages/message/index.less
+++ b/src/pages/message/index.less
@@ -32,6 +32,9 @@
       }
     }
 
+    .adm-badge-wrapper {
+      display: block;
+    }
     .adm-badge-content {
       font-size: 1.6rem;
       line-height: 1.6rem;
